style.css
:root {
  --purple-900: hsl(300, 43%, 22%);
  --purple-300: hsl(303, 10%, 53%);
  --purple-100: hsl(300, 24%, 96%);
  --pink-400: hsl(333, 80%, 67%);
  --orange-400: hsl(28, 84%, 61%);
}

html {
  height: 100%;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "League Spartan", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
  line-height: 1;
  font-size: .9375rem;
  font-weight: 400;
  position: relative;
  height: 100%;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

button,
input,
textarea,
select {
  font: inherit;
}

a {
  text-decoration: none;
  color: inherit;
}

.bg-pattern {
  position: absolute;
  z-index: -1;
}

.bg-pattern-top-mobile {
  left: 0;
  top: 0;
}

.bg-pattern-bottom-mobile {
  right: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

.bg-pattern-top-desktop {
  display: none;
}

.bg-pattern-bottom-desktop {
  display: none;
}

header {
  text-align: center;
  padding-top: 80px;
  margin-inline: 24px;
}

h1 {
  font-size: 2.5rem;
  font-weight: 700;
  line-height: 0.85;
  letter-spacing: -0.125rem;
  color: var(--purple-900);
  max-width: 29.125rem;
  padding-bottom: 16px;
  margin-inline: auto;
}

header p {
  color: var(--purple-300);
  font-size: 1.1875rem;
  font-weight: 500;
  line-height: 1.35;
  letter-spacing: -0.6px;
  padding-bottom: 32px;
  max-width: 28.3125rem;
  margin-inline: auto;
}

.rating-wrapper {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.rating-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
  padding: 16px 0;
  max-width: 28.3125rem;
  margin-inline: auto;
  background-color: var(--purple-100);
  border-radius: 8px;
}

.stars-visual {
  display: flex;
  gap: 8px;
}

.rating-text {
  font-size: 1.0625rem;
  font-weight: 700;
  color: var(--purple-900);
}

main {
  margin-inline: 24px;
  position: relative;
}

section {
  display: flex;
  flex-direction: column;
  gap: 16px;
  padding-top: 48px;
  padding-bottom: 80px;
  max-width: 28.3125rem;
  margin-inline: auto;
}

article {
  background-color: var(--purple-900);
  border-radius: 8px;
  padding: 32px;
  color: white;
}

article img {
  border-radius: 50%;
  width: 2.5rem;
}

.card-header {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 24px;
}

.card-header h2 {
  font-size: 1.0625rem;
  font-weight: 700;
  letter-spacing: 0px;
}

.card-header p {
  font-size: 1.0625rem;
  font-weight: 400;
  color: var(--pink-400);
}

article>p {
  margin-top: 32px;
  font-size: 1.0625rem;
  font-weight: 500;
  line-height: 1.3;
}

@media (min-width: 31.25rem) {
  .bg-pattern-bottom-mobile {
    display: none;
  }

  .bg-pattern-bottom-desktop {
    display: block;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
  }

  .rating-container {
    flex-direction: row;
    padding: 16px 32px;
    gap: 32px;
  }
}

@media (min-width: 768px) {

  .bg-pattern-top-mobile {
    display: none;
  }

  .bg-pattern-top-desktop {
    display: block;
    left: 0;
    top: 0;
  }

  header {
    padding-top: 116px;
  }

  .rating-container {
    flex-direction: row;
    padding: 16px 32px;
    gap: 32px;
  }

  h1 {
    font-size: 3.5rem;
  }
}

@media (min-width: 75rem) {
  header {
    display: flex;
    justify-content: space-between;
    max-width: 69.375rem;
    margin-inline: auto;
  }

  header h1 {
    text-align: left;
    max-width: 25rem;
    margin-inline: 0;
  }

  header p {
    text-align: left;
    padding-bottom: 0;
  }

  .rating-wrapper {
    margin-block: auto;
  }

  .rating-container {
    margin: 0;
  }

  .rating-container:nth-child(1) {
    transform: translateX(-96px);
  }

  .rating-container:nth-child(2) {
    transform: translateX(-48px);
  }

  section {
    max-width: 69.375rem;
    padding-top: 64px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
  }

  article:nth-child(2) {
    transform: translateY(16px);
  }

  article:nth-child(3) {
    transform: translateY(32px);
  }
}

